--- a/WebNotas/Views/Home/Autor.cshtml
+++ b/WebNotas/Views/Home/Autor.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Rubén Alejandro Ramirez";
+    ViewData["Title"] = "Lautaro Acevedo";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Profesor de la Tecnicatura Superior de Desarrollo de Software.</p>
+<p>Alumno de la Tecnicatura Superior de Desarrollo de Software.</p>
